--- a/css/style.css
+++ b/css/style.css
@@ -52,15 +52,20 @@ html {
     color: #eee;
 }
 
+.p {
+    font-size: 1.2em;
+    line-height: 30px;
+}
+
 .header-top {
     padding: 10px 0;
     background-color: #255ee9;
 }
 
-.header-top .main-menu-container
-
 .header-top .main-menu > * {
-    padding: 10px;
+/*    padding: 10px; */
+    display: felx;
+    align-items: center;
 }
 
 .header-top .main-menu-container > .main-nav {
@@ -126,6 +131,23 @@ main > section:nth-child(even) {
 
 main img {
     max-width: 100%;
+}
+
+main h2 {
+    font-size: 2.5em;
+}
+
+main section .text-container {
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+main > section:nth-child(odd) .text-container {
+    padding-left: 40px;
+}
+
+main > section:nth-child(even) .text-container {
+    padding-left: 40px;
 }
 
 /* .debug .header-bottom .jumbotron {
