--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,10 @@ html {
     width: calc((100% / 4) * 3);
 }
 
+.text-container {
+    float: left;
+}
+
 .my-button {
     display: inline-block;
     padding: 10px 20px;
@@ -169,12 +173,6 @@ main > section:nth-child(even) .text-container {
     padding-left: 40px;
 }
 
-/* .debug .header-bottom .jumbotron {
-    background-color: fuchsia;
-    border: 1px dashed black;
-    min-height: 400px;
-} */
-
 .debug main section .my-row .my-col-3-5 {
     background-color: #1e90ff;
     border: 1px dashed black;
@@ -185,10 +183,6 @@ main > section:nth-child(even) .text-container {
     background-color: pink;
     border: 1px dashed black;
     min-height: 400px;
-}
-
-.debug main section .big-green {
-
 }
 
 footer {
